# adamant

./: CLAUDE.md  Cargo.toml  README.md
docs/: 01_architecture.md  02_event_loop.md  03_wgpu_basics.md  04_shaders.md  05_instancing.md
shaders/: quad.wgsl
src/: app.rs  lib.rs  main.rs
src/renderer/: mod.rs  pipeline.rs
