[package]
name = "adamant"
version = "0.1.0"
edition = "2024"
description = "A high-performance, GPU-accelerated terminal emulator"
authors = ["Matuyuhi"]
license = "MIT"

[dependencies]
# Graphics - WebGPU implementation in Rust
wgpu = "28.0.0"

# Windowing - Cross-platform window management
winit = "0.30.12"

# Minimal blocking executor for async operations
pollster = "0.4.0"

# Byte manipulation utilities (useful for GPU buffer handling)
bytemuck = { version = "1.24.0", features = ["derive"] }

# Logging
log = "0.4.29"
env_logger = "0.11.8"

# TODO: Phase 2 - Font rendering
# swash = "0.1"

# TODO: Phase 3 - PTY handling
# portable-pty = "0.8"

[profile.release]
opt-level = 3
lto = true
